3ano/2-Semestre/LFA/bloco2/b2_05/Numbers.g4
grammar Numbers;

// --- Regras de Parser (minúsculas) ---
file: line+ EOF;

line: NUM '-' NAME NEWLINE;

// --- Regras de Lexer (MAIÚSCULAS) ---
NUM:  [0-9]+ ;
NAME: [a-zA-Z]+ ;

NEWLINE: '\r'? '\n' ;
WS: [ \t]+ -> skip;
